2006-03-19  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>

	* po/br.po: Added Breton translation.
	* configure.ac: Added Breton translation.

2006-03-19  Steve Frécinaux  <steve@istique.net>

	* gedit/plugins/externaltools/tools/manager.py:
	* gedit/plugins/externaltools/tools/tools.glade: 
	
	Fake autoapply by updating the menu when the manager looses
	focus (bug 334963)

2006-03-18  Vladimer Sichinava  <vlsichinava@gmail.com>

	* configure.in: Added "ka" (Georgian) to ALL_LINGUAS

=== gedit 2.14.1 ===

2006-03-16  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/plugins/snippets/data/latex.xml: escape \.

2006-03-16  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/plugins/snippets/data/*: do not use ctrl+shift accels.

2006-03-14  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-close-confirmation-dialog.[ch]:
	* gedit/gedit-commands-file.c:
	* gedit/gedit-session.c:

	do not leak the list of selected documents.
	Noticed by Vincent Geddes (bug 333882).

2006-03-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-search.c: fix sanity check, typo spotted
	by Krzysiek Szczuka.

2006-03-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit.c: do not open a new display at every launch.

2006-03-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-tab.c: fix a compiler warning.

=== gedit 2.14.0 ===

2006-03-12  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.14.0 released

=== gedit 2.13.93 ===

2006-03-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.93 released

2006-03-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/dialogs/gedit-search-dialog.c: grab focus on the entry.

2006-03-05  Steve Frécinaux  <steve@istique.net>

	* plugins/snippets/snippets/SnippetsDialog.py:
	* plugins/snippets/snippets/snippets.glade:
	* plugins/externaltools/tools/manager.py:
	
	Show the Plugin page from gedit help when clicking on the Help button