@@ -1,3 +1,8 @@
+2006-03-19  Christian Persch  <chpe@cvs.gnome.org>
+
+	* gedit/gedit.c: (main): Call bind_textdomain_codeset before 
+	using gettext. Bug #335119.
+
 2006-03-19  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
 
 	* po/br.po: Added Breton translation.
